--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.1",
     "babel-preset-es2015": "^6.22.0",
+    "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "webpack": "^2.2.1",
     "webpack-s3-plugin": "^0.9.2"
