--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "webpack-react-app",
   "version": "1.0.0",
   "description": "\"Front-end interface\"",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack -d --watch",
-    "build": "webpack -p"
+    "start": "webpack-dev-server --env.dev",
+    "test": "standard",
+    "clean": "rimraf dist",
+    "build": "npm run clean && webpack --env.dev",
+    "deploy": "npm run clean && webpack -p --env.prod",
+    "lint": "standard"
   },
   "repository": {
     "type": "git",
@@ -19,11 +21,6 @@
   },
   "homepage": "https://github.com/Snapflixapp/webpack-react-app#readme",
   "dependencies": {
-    "aws-sdk": "^2.15.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
     "dotenv": "^4.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -33,9 +30,16 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.1",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
+    "rimraf": "^2.5.4",
+    "standard": "^8.6.0",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
+    "webpack-config-utils": "^2.3.0",
+    "webpack-dev-server": "^2.3.0",
     "webpack-s3-plugin": "^0.9.2"
   }
 }
