--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^6.3.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
