--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "dotenv": "^4.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-router-dom": "^4.0.0-beta.6"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.3",
     "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
@@ -36,12 +38,20 @@
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
+    "postcss-color-function": "^3.0.0",
+    "postcss-import": "^9.1.0",
+    "postcss-initial": "^1.5.3",
+    "postcss-loader": "^1.3.0",
+    "postcss-math": "0.0.7",
+    "postcss-mixins": "^5.4.1",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-vars": "^3.0.0",
+    "react-hot-loader": "^3.0.0-beta.6",
     "rimraf": "^2.5.4",
     "standard": "^8.6.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-config-utils": "^2.3.0",
-    "webpack-dev-server": "^2.3.0",
-    "webpack-s3-plugin": "^0.9.2"
+    "webpack-dev-server": "^2.3.0"
   }
 }
