--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "standard",
     "clean": "rimraf dist",
     "build": "npm run clean && webpack --env.dev",
-    "deploy": "npm run clean && webpack -p --env.prod",
+    "deploy": "npm run clean && webpack --env.prod -p",
     "lint": "standard"
   },
   "repository": {
@@ -36,6 +36,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.23.0",
     "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "postcss-color-function": "^3.0.0",
@@ -46,6 +47,7 @@
     "postcss-mixins": "^5.4.1",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
+    "progress-bar-webpack-plugin": "^1.9.3",
     "react-hot-loader": "^3.0.0-beta.6",
     "rimraf": "^2.5.4",
     "standard": "^8.6.0",
