--- a/package.json
+++ b/package.json
@@ -21,16 +21,22 @@
   },
   "homepage": "https://github.com/Snapflixapp/webpack-react-app#readme",
   "dependencies": {
+    "axios": "^0.15.3",
     "dotenv": "^4.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router-dom": "^4.0.0-beta.6"
+    "react-redux": "^5.0.2",
+    "react-router-dom": "^4.0.0-beta.6",
+    "redux": "^3.6.0",
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.3",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
@@ -49,6 +55,7 @@
     "postcss-simple-vars": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.9.3",
     "react-hot-loader": "^3.0.0-beta.6",
+    "redux-logger": "^2.8.1",
     "rimraf": "^2.5.4",
     "standard": "^8.6.0",
     "style-loader": "^0.13.1",
