--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "dotenv": "^4.0.0",
+    "jwt-decode": "^2.1.0",
     "kairos-api": "^0.1.3",
     "qs": "^6.3.1",
     "react": "^15.4.2",
