--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-promise-middleware": "^4.2.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.3",
