--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "dotenv": "^4.0.0",
     "jwt-decode": "^2.1.0",
     "kairos-api": "^0.1.3",
+    "lodash": "^4.17.4",
     "qs": "^6.3.1",
+    "querystring": "^0.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "react-router-dom": "^4.0.0-beta.6",
+    "react-router-dom": "^4.0.0-beta.7",
     "recordrtc": "^5.4.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
