--- a/package.json
+++ b/package.json
@@ -21,21 +21,18 @@
   },
   "homepage": "https://github.com/Snapflixapp/webpack-react-app#readme",
   "dependencies": {
+    "apollo-client": "^0.10.1",
     "axios": "^0.15.3",
     "dotenv": "^4.0.0",
+    "graphql-tag": "^1.3.1",
     "jwt-decode": "^2.1.0",
     "kairos-api": "^0.1.3",
     "qs": "^6.3.1",
     "react": "^15.4.2",
+    "react-apollo": "^0.13.2",
     "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
     "react-router-dom": "^4.0.0-beta.7",
-    "recordrtc": "^5.4.1",
-    "redux": "^3.6.0",
-    "redux-logger": "^2.8.1",
-    "redux-promise-middleware": "^4.2.0",
-    "redux-thunk": "^2.2.0",
-    "uuid": "^3.0.1"
+    "recordrtc": "^5.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.3",
