--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "react": "^15.4.2",
     "react-apollo": "^0.13.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.7",
-    "recordrtc": "^5.4.1"
+    "recordrtc": "^5.4.1",
+    "redux": "^3.6.0",
+    "redux-form": "^6.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.3",
@@ -57,6 +60,7 @@
     "postcss-simple-vars": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.9.3",
     "react-hot-loader": "^3.0.0-beta.6",
+    "redux-devtools": "^3.3.2",
     "rimraf": "^2.5.4",
     "standard": "^8.6.0",
     "style-loader": "^0.13.1",
