--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack-react-app",
   "version": "1.0.0",
-  "description": "\"Front-end interface\"",
+  "description": "Webpack client for snapflix application",
   "scripts": {
     "start": "webpack-dev-server --env.dev",
     "test": "standard",
@@ -31,6 +31,7 @@
     "react": "^15.4.2",
     "react-apollo": "^0.13.2",
     "react-dom": "^15.4.2",
+    "react-modal": "^1.7.1",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.7",
     "recordrtc": "^5.4.1",
