--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "axios": "^0.15.3",
     "dotenv": "^4.0.0",
     "graphql-tag": "^1.3.1",
-    "jwt-decode": "^2.1.0",
     "kairos-api": "^0.1.3",
-    "qs": "^6.3.1",
     "react": "^15.4.2",
     "react-apollo": "^0.13.2",
     "react-dom": "^15.4.2",
@@ -35,8 +33,7 @@
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.7",
     "recordrtc": "^5.4.1",
-    "redux": "^3.6.0",
-    "redux-form": "^6.5.0"
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.3",
